--- a/emails/otp_template.html
+++ b/emails/otp_template.html
@@ -1,1 +1,13 @@
 <!-- Template HTML cho email OTP: Secure (no plain OTP in subject), expiry note. -->
+ <!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <title>OTP Code</title>
+</head>
+<body>
+    <h1>Mã Xác Thực OTP</h1>
+    <p>Mã của bạn là: <strong>{otp}</strong></p>
+    <p>Mã có hiệu lực trong 5 phút. Không chia sẻ mã này.</p>
+</body>
+</html>
